--- a/SNImplementationDocs/Test.html
+++ b/SNImplementationDocs/Test.html
@@ -73,7 +73,7 @@
                         <div class="card-header"><h3>manual scope</h3></div>
                         <div class="card-body container-fluid">
                             <div class="row">
-                                <div class="col-2">baseValue:</div>
+                                <div class="col-2 alert-warning">baseValue:</div>
                                 <div class="col-1">{{ baseValue }}</div>
                                 <div class="col-2">baseObj:</div>
                                 <div class="col-1">{{ baseObj.value }}</div>
