--- a/SNImplementationDocs/Test.html
+++ b/SNImplementationDocs/Test.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="Scripts/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="Scripts/bootstrap.bundle.js"></script>
     <script type="text/javascript" src="Scripts/angular.js"></script>
+    <script type="text/javascript" src="App/CommonJsUtility.js"></script>
     <script type="text/javascript" src="App/Test.js"></script>
 </head>
 <body>
