--- a/SNImplementationDocs/UriParser.html
+++ b/SNImplementationDocs/UriParser.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="Scripts/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="Scripts/bootstrap.bundle.js"></script>
     <script type="text/javascript" src="Scripts/angular.js"></script>
+    <script type="text/javascript" src="App/CommonJsUtility.js"></script>
     <script type="text/javascript" src="App/UriBuilder.js"></script>
 </head>
 <body>
