--- a/ChangeManagement.html
+++ b/ChangeManagement.html
@@ -13,14 +13,13 @@
     <script type="text/javascript" src="lib/angular.js/angular.js"></script>
     <script type="text/javascript" src="App/sys.js"></script>
     <script type="text/javascript" src="App/app.js"></script>
-    <script type="text/javascript" src="App/ChangeManagement.js"></script>
 </head>
 <body>
     <main-app-page-head></main-app-page-head>
     <form id="setupOverviewTasksForm" action="initialConfig.html">
         <div class="container-fluid">
             <div class="row flex-nowrap">
-                <section class="container-fluid col-8 col-lg-9" ng-controller="changeManagmentController">
+                <section class="container-fluid col-8 col-lg-9">
                     integrate the code of the UI Action "Risk Assessment" (/sys_ui_action.do?sys_id=8d300156d7033200532c24837e6103e8) with another action on the change before it gets to CAB, forcing the user to take the survey before proceeding
                 </section>
                 <aside class="container-fluid col-4 col-lg-3">
