Created script to generate sample code markup.

--- a/src/InitialConfig.html
+++ b/src/InitialConfig.html
@@ -87,9 +87,8 @@
                         <ol>
                             <li>
                                 Import the <var class="targetName">util</var> application from <kbd><config-url base="git" href="x_44813_util.git"></config-url></kbd>.
-                                <!-- <div><button (click)="openHowtoImportApplication('util')" class="btn btn-outline-primary mb-2 mr-2">Click Here</button>
-        to view instructions for importing applications from source countrol.</div> -->
                             </li>
+                            <li>Once the application is imported, select the <var>Util</var> application to open it in <var class="targetName">ServiceNow Studio</var> </li>
                             <li>
                                 Once the application is imported, select that application in order to put your session in the correct
                                 scope, and then close out the <var class="targetName">Application Studio</var> browser tab.
