Added project for URI builder form

--- a/src/InitialConfig.html
+++ b/src/InitialConfig.html
@@ -88,11 +88,9 @@
                             <li>
                                 Import the <var class="targetName">util</var> application from <kbd><config-url base="git" href="x_44813_util.git"></config-url></kbd>.
                             </li>
-                            <li>Once the application is imported, select the <var>Util</var> application to open it in <var class="targetName">ServiceNow Studio</var> </li>
-                            <li>
-                                Once the application is imported, select that application in order to put your session in the correct
-                                scope, and then close out the <var class="targetName">Application Studio</var> browser tab.
-                            </li>
+                            <li>Once the application is imported, select the <var>Util</var> application to open it in <var class="targetName">ServiceNow Studio</var>.</li>
+                            <li>Next, open <sn-nav-link path-nodes="Source Control/Switch Branch" /> from the menu at the top of the screen and select the branch named <kbd>V1.1</kbd> in the dropdown.</li>
+                            <li>Click the <kbd>Switch Branch</kbd> button. You will see a message saying that it's uninstalling and then re-installing the application. Once it's done, close out the <var class="targetName">ServiceNow Studio</var> browser tab.</li>
                         </ol>
                     </div>
                 </div>
@@ -235,6 +233,9 @@
                                     Once the application is imported, select that application in order to put your session in the correct
                                     scope, and then close out the <var class="targetName">Application Studio</var> browser tab.
                                 </li>
+                                <li>Once the application is imported, select the <var>Physical Networks</var> application to open it in <var class="targetName">ServiceNow Studio</var>.</li>
+                                <li>Next, open <sn-nav-link path-nodes="Source Control/Switch Branch" /> from the menu at the top of the screen and select the branch named <kbd>V1</kbd> in the dropdown.</li>
+                                <li>Click the <kbd>Switch Branch</kbd> button. You will see a message saying that it's uninstalling and then re-installing the application. Once it's done, close out the <var class="targetName">ServiceNow Studio</var> browser tab.</li>
                                 <li>
                                     In the original ServiceNow browser tab, you will need to refresh the browser screen to see the new menu item that was added when this application was imported.
                                 </li>
