--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             segments.pop();
         url.pathname = (segments[i].length > 0) ? segments.join("/") + "/" : segments.join("/");
         document.write('<base href="' + url.href + '" />');
-                    //]]>
+                            //]]>
     </script>
     <link rel="stylesheet" href="lib/twitter-bootstrap/css/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="lib/angular.js/angular-csp.css" type="text/css" />
@@ -31,44 +31,18 @@
     <script type="text/javascript" src="lib/angular.js/angular.js"></script>
     <script type="text/javascript" src="lib/angular.js/angular-route.js"></script>
     <script type="text/javascript" src="App/sys.js"></script>
-    <script type="text/javascript" src="App/app.js"></script>
-    <script type="text/javascript" src="App/IncidentManagement.js"></script>
+    <script type="text/javascript" src="App/mainApp.js"></script>
+    <script type="text/javascript" src="App/accordionGroup.js"></script>
 </head>
-<body ng-app="app" ng-controller="mainContentController">
+<body ng-app="mainApp" ng-controller="mainContent">
     <header class="container-fluid p-1">
         <h1>{{ pageTitle }}</h1>
         <h2 ng-show="showSubtitle">{{ subTitle }}</h2>
-        <nav class="container-fluid navbar navbar-expand-sm p-1 mr-auto">
-            <ul class="navbar-nav">
-                <li ng-repeat="i in pageTopNavItems" ng-class="i.linkItemCss"><a ng-href="{{i.href}}" ng-class="i.anchorCss" ng-click="i.click($event)">{{i.title}}</a></li>
-            </ul>
-        </nav>
     </header>
     <div class="container-fluid">
         <div class="row flex-nowrap">
             <section ng-class="mainSectionClass"><ng-view></ng-view></section>
             <aside class="container-fluid col-4 col-lg-3" ng-show="showNavAsideElement">
-                <div class="container-fluid" ng-show="showSideNavBreadcrumbs">
-                    <div class="d-inline p-2 flex-nowrap" ng-repeat="i in sideNavBreadcrumbItems">
-                        <span ng-show="$index!=0">&rArr;</span>
-                        <a ng-href="{{i.href}}" ng-click="i.click($event)" class="btn btn-outline-secondary" role="button">{{ i.title }}</a>
-                    </div>
-                </div>
-                <div class="card" ng-show="showSideNavItems">
-                    <div class="card-header" ng-show="showSideNavHeading"><h4>{{sideNavHeading}}</h4></div>
-                    <div class="card-body">
-                        <ul class="nav flex-column">
-                            <li class="nav-item" ng-repeat="i in precedingSideNavItems" ng-class="i.linkItemCss"><a ng-href="{{i.href}}" ng-class="i.anchorCss" ng-click="i.click($event)">{{i.title}}</a></li>
-                            <li class="nav-item" ng-show="showCurrentItem">
-                                <a ng-href="#" ng-click="currentNavItem.click($event)" ng-class="currentNavItem.anchorCss">{{ currentNavItem.title }}</a>
-                                <ul class="nav flex-column" ng-show="showNestedChildNav">
-                                    <li class="nav-item" ng-repeat="i in nestedChildNavItems" ng-class="i.linkItemCss"><a ng-href="{{i.href}}" ng-class="i.anchorCss" ng-click="i.click($event)">{{i.title}}</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item" ng-repeat="i in followingSideNavItems" ng-class="i.linkItemCss"><a ng-href="{{i.href}}" ng-class="i.anchorCss" ng-click="i.click($event)">{{i.title}}</a></li>
-                        </ul>
-                    </div>
-                </div>
             </aside>
         </div>
     </div>
